fix: remove default button padding and align size with SVG icons

--- a/src/components/ContactCard/ContactCard.module.css
+++ b/src/components/ContactCard/ContactCard.module.css
@@ -9,6 +9,12 @@
     gap: 8px;
 }
 
+.iconsWrapper {
+    display: flex;
+    flex-direction: column;
+    /* gap: 6px; */
+}
+
 .like {
     width: 20px;
     height: 20px;
