--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -21,8 +21,10 @@ ul {
 
 
 button {
-    padding: 0;
     border: none;
+    padding: 0;
+    margin: 0;
+    line-height: 1;
     cursor: pointer;
     outline: none;
     background: transparent;
